# postgres-copy

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/postgres_copy/: __init__.py  itertest.py  postgres.py
