[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "postgres_copy"
version = "0.1.0"
description = "PostgreSQL-focused Python library for streaming inserts and lightweight querying"
authors = [
    { name = "Justin Pfeifer" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "psycopg==3.1.18",
    "pydantic"
]